[gd_scene load_steps=9 format=3 uid="uid://7ypbdd5rheui"]

[ext_resource type="PackedScene" uid="uid://ci3c3pocxiywq" path="res://Scenes/Experiments/drag_object.tscn" id="1_1vclv"]
[ext_resource type="Script" path="res://_Scripts/MinG_Mamushka/mamushka_controller.gd" id="1_vp2p0"]
[ext_resource type="Texture2D" uid="uid://chqivoetkgkoj" path="res://Sprites/UI/circulo.png" id="2_xro2d"]
[ext_resource type="Texture2D" uid="uid://da6hjyn0lo2y0" path="res://Sprites/ZonaAstronomia/Mamushka_Arriba_Layer3.png" id="4_0rd8j"]
[ext_resource type="Texture2D" uid="uid://dpnclrykjhq8f" path="res://Sprites/ZonaAstronomia/Mamushka_Arriba.png" id="4_yj1g3"]
[ext_resource type="Texture2D" uid="uid://djivbvfp0j8hc" path="res://Sprites/ZonaAstronomia/Mamushka_Abajo_Layer3.png" id="5_4feum"]
[ext_resource type="Texture2D" uid="uid://bn3ka84btw5ji" path="res://Sprites/ZonaAstronomia/Mamushka_Abajo.png" id="5_7trku"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fnolv"]
radius = 110.454

[node name="mamushkaController" type="Node2D"]
script = ExtResource("1_vp2p0")

[node name="DragObject" parent="." instance=ExtResource("1_1vclv")]
PlaceInAllSpots = true

[node name="CollisionShape2D" parent="DragObject" index="0"]
shape = SubResource("CircleShape2D_fnolv")

[node name="Button" parent="DragObject" index="1"]
offset_left = -85.0
offset_top = -82.0
offset_right = 87.0
offset_bottom = 82.0

[node name="Sprites" type="Node2D" parent="."]

[node name="Layer0" type="Sprite2D" parent="Sprites"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_xro2d")

[node name="Layer1" type="Node2D" parent="Sprites"]
modulate = Color(0.211765, 0.352941, 1, 1)

[node name="Sprite2D2" type="Sprite2D" parent="Sprites/Layer1"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_0rd8j")

[node name="Sprite2D" type="Sprite2D" parent="Sprites/Layer1"]
position = Vector2(0, -6)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_4feum")

[node name="Layer2" type="Node2D" parent="Sprites"]
visible = false

[node name="Sprite2D2" type="Sprite2D" parent="Sprites/Layer2"]
texture = ExtResource("4_yj1g3")

[node name="Sprite2D" type="Sprite2D" parent="Sprites/Layer2"]
position = Vector2(0, -6)
texture = ExtResource("5_7trku")

[node name="Layer3" type="Node2D" parent="Sprites"]
visible = false

[node name="Sprite2D2" type="Sprite2D" parent="Sprites/Layer3"]
texture = ExtResource("4_0rd8j")

[node name="Sprite2D" type="Sprite2D" parent="Sprites/Layer3"]
position = Vector2(0, -6)
texture = ExtResource("5_4feum")

[node name="Layer4" type="Node2D" parent="Sprites"]
visible = false

[node name="Sprite2D2" type="Sprite2D" parent="Sprites/Layer4"]
texture = ExtResource("4_yj1g3")

[node name="Sprite2D" type="Sprite2D" parent="Sprites/Layer4"]
position = Vector2(0, -6)
texture = ExtResource("5_7trku")

[editable path="DragObject"]
